--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,11 +7,11 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "network.oversee.buttin"
+        applicationId "download.crossally.apps.hizkiyyah"
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 3
-        versionName "1.0.2"
+        versionCode 10
+        versionName "1.1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -35,28 +35,21 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.2.0-beta01'
-
+    implementation 'com.google.android.material:material:1.3.0-alpha01'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-
-    implementation 'com.google.firebase:firebase-database:19.3.0'
-    implementation 'com.google.firebase:firebase-auth:19.3.0'
+    implementation 'com.google.firebase:firebase-database:19.3.1'
+    implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
-    implementation 'com.google.android.gms:play-services-ads:19.1.0'
-
+    implementation 'com.google.android.gms:play-services-ads:19.2.0'
     implementation 'com.facebook.stetho:stetho:1.5.1'
     implementation 'com.facebook.stetho:stetho-okhttp:1.5.1'
     implementation 'com.facebook.stetho:stetho-js-rhino:1.5.1'
-
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
-
     implementation 'com.jakewharton:butterknife:10.1.0'
     implementation 'com.google.firebase:firebase-analytics:17.4.3'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
-
     implementation 'io.github.inflationx:calligraphy3:3.1.1'
     implementation 'io.github.inflationx:viewpump:2.0.3'
-
     implementation 'com.mikhaellopez:circularimageview:4.2.0'
     implementation 'me.relex:circleindicator:2.1.4'
 
@@ -64,7 +57,7 @@ dependencies {
 
     implementation 'com.android.support:multidex:1.0.3'
 
-    implementation 'com.google.firebase:firebase-crashlytics:17.0.0'
+    implementation 'com.google.firebase:firebase-crashlytics:17.1.0'
 
     implementation('org.jitsi.react:jitsi-meet-sdk:2.9.0') { transitive = true }
 
@@ -74,9 +67,7 @@ dependencies {
     implementation 'com.github.sephiroth74:NumberSlidingPicker:1.0.3'
 
     implementation 'com.github.florent37:diagonallayout:1.0.9'
-
     implementation 'com.github.javiersantos:AppUpdater:2.7'
-
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
