--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,15 +10,16 @@ android {
         applicationId "download.crossally.apps.hizkiyyah"
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 10
-        versionName "1.1.0"
+        versionCode 12
+        versionName "1.1.3"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -62,7 +63,7 @@ dependencies {
     implementation('org.jitsi.react:jitsi-meet-sdk:2.9.0') { transitive = true }
 
     implementation 'com.daimajia.swipelayout:library:1.2.0@aar'
-    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
 
     implementation 'com.github.sephiroth74:NumberSlidingPicker:1.0.3'
 
