--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,25 +1,32 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
+// Apply the Crashlytics Gradle plugin
 apply plugin: 'com.google.firebase.crashlytics'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+apply plugin: "com.bugsnag.android.gradle"
+apply plugin: 'com.google.firebase.firebase-perf'
+
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "29.0.3"
-
+    buildToolsVersion '30.0.0'
     defaultConfig {
         applicationId "download.crossally.apps.hizkiyyah"
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 12
-        versionName "1.1.3"
+        versionCode 13
+        multiDexEnabled true
+        versionName "1.1.13"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
         release {
-            minifyEnabled true
-            shrinkResources true
+            minifyEnabled false
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -29,39 +36,56 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    kapt {
+        generateStubs = true
+    }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.3.0-alpha01'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'com.google.android.material:material:1.3.0-alpha02'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.firebase:firebase-database:19.3.1'
-    implementation 'com.google.firebase:firebase-auth:19.3.1'
+    implementation 'com.google.firebase:firebase-auth:19.3.2'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
-    implementation 'com.google.android.gms:play-services-ads:19.2.0'
+    implementation 'com.google.android.gms:play-services-ads:19.3.0'
     implementation 'com.facebook.stetho:stetho:1.5.1'
     implementation 'com.facebook.stetho:stetho-okhttp:1.5.1'
     implementation 'com.facebook.stetho:stetho-js-rhino:1.5.1'
-    implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
-    implementation 'com.jakewharton:butterknife:10.1.0'
-    implementation 'com.google.firebase:firebase-analytics:17.4.3'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.jakewharton:butterknife:10.2.1'
+    kapt 'com.jakewharton:butterknife-compiler:10.2.1'
     implementation 'io.github.inflationx:calligraphy3:3.1.1'
     implementation 'io.github.inflationx:viewpump:2.0.3'
     implementation 'com.mikhaellopez:circularimageview:4.2.0'
     implementation 'me.relex:circleindicator:2.1.4'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.google.firebase:firebase-crashlytics:17.1.0'
-    implementation('org.jitsi.react:jitsi-meet-sdk:2.9.0') { transitive = true }
+    implementation 'com.google.firebase:firebase-crashlytics:17.2.1'
+    // Recommended: Add the Firebase SDK for Google Analytics.
+    implementation 'com.google.firebase:firebase-analytics-ktx:17.5.0'
+    implementation 'com.google.firebase:firebase-analytics:17.5.0'
+    // Add the Firebase Crashlytics SDK.
+    implementation 'com.google.firebase:firebase-crashlytics-ktx:17.2.1'
+    implementation('org.jitsi.react:jitsi-meet-sdk:2.9.3') { transitive = true }
     implementation 'com.daimajia.swipelayout:library:1.2.0@aar'
+    implementation 'com.github.ajalt:timberkt:1.5.1'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
     implementation 'com.github.sephiroth74:NumberSlidingPicker:1.0.3'
     implementation 'com.github.florent37:diagonallayout:1.0.9'
     implementation 'com.github.javiersantos:AppUpdater:2.7'
+    implementation 'com.vungle:publisher-sdk-android:6.7.0'
+    implementation 'com.google.ads.mediation:vungle:6.7.0.0'
+    implementation 'com.google.ads.mediation:mopub:5.13.1.0'
+    implementation 'com.google.ads.mediation:facebook:5.11.0.0'
+    implementation 'com.google.ads.mediation:adcolony:4.1.4.1'
+    // Add the dependency for the Performance Monitoring library
+    implementation 'com.google.firebase:firebase-perf:19.0.8'
+    implementation "com.bugsnag:bugsnag-android:5.0.2"
     testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
