--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,13 +25,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="UnusedAttribute">
-
+        <meta-data
+            android:name="firebase_performance_logcat_enabled"
+            android:value="true" />
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="@string/app_id"/>
-
+        <meta-data
+            android:name="com.bugsnag.android.API_KEY"
+            android:value="1c5c00cec04e3f7aaca2ee68956ea883"/>
         <activity
-            android:name="download.crossally.apps.hizkiyyah.SplashActivity"
+            android:name=".SplashActivity"
             android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
             android:noHistory="true"
