--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,9 @@
         <meta-data
             android:name="com.bugsnag.android.API_KEY"
             android:value="1c5c00cec04e3f7aaca2ee68956ea883" />
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
 
         <activity
             android:name=".SplashActivity"
@@ -52,7 +55,7 @@
             android:label="@string/app_name"
             android:noHistory="true"
             android:screenOrientation="sensorPortrait"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -65,7 +68,7 @@
             android:label="@string/app_name"
             android:noHistory="true"
             android:screenOrientation="sensorPortrait"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.Splash" />
         <activity
             android:name=".RegisterActivity"
             android:configChanges="orientation|screenSize"
