--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
         classpath "com.bugsnag:bugsnag-android-gradle-plugin:5.7.6"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
+        classpath 'me.moallemi.gradle:advanced-build-version:1.7.3'
     }
 }
 
