--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,9 +14,9 @@ android {
         applicationId "download.crossally.apps.hizkiyyah"
         minSdkVersion 23
         targetSdkVersion 30
-        versionCode 19
+        versionCode 20
         multiDexEnabled true
-        versionName  "1.4.19"
+        versionName  "1.4.21"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -59,7 +59,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.32"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.32"
     implementation('com.smartlook.recording:app:1.5.2-native')
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.android.material:material:1.4.0-alpha02'
     implementation 'androidx.recyclerview:recyclerview:1.2.0'
@@ -90,7 +90,7 @@ dependencies {
     // FirebaseUI for Real-time database
     implementation 'com.firebaseui:firebase-ui-database:7.1.1'
     // Paging Library (For Pagination Only)
-    implementation 'androidx.paging:paging-runtime:3.0.0'
+    implementation 'androidx.paging:paging-runtime-ktx:3.0.0'
     // Recommended: Add the Firebase SDK for Google Analytics.
     implementation 'com.google.firebase:firebase-analytics-ktx'
     // Add the Firebase Crashlytics SDK.
@@ -98,7 +98,8 @@ dependencies {
     // debugImplementation because LeakCanary should only run in debug builds.
     implementation 'com.squareup.picasso:picasso:2.71828'  // picasso library
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.5'
-    implementation('org.jitsi.react:jitsi-meet-sdk:3.6.0') { transitive = true }
+    implementation('org.jitsi.react:jitsi-meet-sdk:3.0.0') { transitive = true }
+
     implementation 'com.daimajia.swipelayout:library:1.2.0@aar'
     implementation 'com.github.ajalt:timberkt:1.5.1'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
