--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,25 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.5.10'
+    ext.kotlin_version = '1.6.0'
     repositories {
-        google()
+        mavenCentral()
         jcenter()
+        mavenCentral()
+        maven {
+            url "https://sdk.smartlook.com/android/release"
+        }
+        maven { url 'https://jitpack.io' }
+        maven { url "https://maven.google.com" }
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.2'
-        classpath 'com.google.gms:google-services:4.3.8'
-        classpath 'com.google.firebase:perf-plugin:1.4.0'
-        classpath "com.bugsnag:bugsnag-android-gradle-plugin:5.7.6"
+        classpath 'com.android.tools.build:gradle:7.2.0-alpha06'
+        classpath 'com.google.gms:google-services:4.3.10'
+        //classpath 'com.google.firebase:perf-plugin:1.4.0'
+        classpath "com.bugsnag:bugsnag-android-gradle-plugin:7.1.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
         classpath 'me.moallemi.gradle:advanced-build-version:1.7.3'
     }
 }
@@ -23,15 +29,19 @@ allprojects {
         google()
         jcenter()
         maven {
+            url "https://sdk.smartlook.com/android/release"
+        }
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+        maven { url "https://maven.google.com" }
+        maven {
             url "https://github.com/jitsi/jitsi-maven-repository/raw/master/releases"
         }
         maven {
             url  "https://adcolony.bintray.com/AdColony"
         }
         maven { url 'https://jitpack.io' }
-        maven {
-            url "https://sdk.smartlook.com/android/release"
-        }
+
         maven { url 'https://jitpack.io' }
     }
 }
