--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,4 @@ android.useAndroidX=true
 android.enableJetifier=true
 gradle.properties.org.gradle.jvmargs=-xmx4608m
 android.enableUnitTestBinaryResources=false
+android.experimental.androidTest.numManagedDeviceShards=1
