--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,7 @@
             android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
             android:noHistory="true"
+            android:exported="true"
             android:screenOrientation="sensorPortrait"
             android:theme="@style/AppTheme.Splash">
             <intent-filter>
